--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,33 @@
 atomicwrites==1.4.0
 attrs==20.3.0
-autopep8==1.5.4
+autopep8==1.5.6
 certifi==2020.12.5
 chardet==4.0.0
 colorama==0.4.4
 cycler==0.10.0
 entrypoints==0.3
 eulerlib==0.2
-flake8==3.8.4
+flake8==3.9.0
 idna==3.1
+iniconfig==1.1.1
 kiwisolver==1.3.1
-matplotlib==3.3.3
+matplotlib==3.3.4
 mccabe==0.6.1
-more-itertools==8.6.0
-numpy==1.19.5
+more-itertools==8.7.0
+numpy==1.20.1
+packaging==20.9
+Pillow==8.1.2
 pluggy==0.13.1
 py==1.10.0
-pycodestyle==2.6.0
+pycodestyle==2.7.0
 pyfiglet==0.8.post1
-pyflakes==2.2.0
+pyflakes==2.3.0
 pyparsing==2.4.7
 pyreadline==2.1
-pytest==6.2.1
+pytest==6.2.2
 python-dateutil==2.8.1
 requests==2.25.1
-scipy==1.6.0
+scipy==1.6.1
 six==1.15.0
-urllib3==1.26.2
+toml==0.10.2
+urllib3==1.26.4
